[package]
name = "inspector-api"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.5.0"
r2d2 = "0.8.10"
r2d2_sqlite = "0.23.0"
rusqlite = "0.30.0"
serde = { version = "1.0.192", features = ["derive"]}
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full", "macros"] }
warp = "0.3.6"
